# todolist

./: .gitignore  COMMIT_JOURNAL.md  INSTALL.md  LICENSE  README.md  attachments.py  backup.py  build.py  calendar_view.py  commands.py  config.py  conftest.py  graph_view.py  gui.py  history.py  i18n.py  integrity.py  markdown_parser.py  md_actions.py  migrate.py  note_model.py  pinyin_index.py  pyproject.toml  reminder.py  requirements.txt  search_engine.py  task_model.py  theme.py  view_modes.py
.github/workflows/: ci.yml  release.yml
examples/: hello_plugin.py
locales/: en_US.json  zh_CN.json
plugins/: __init__.py  loader.py
scripts/: honest_commits.py
security/: __init__.py  crypto.py  keystore.py
storage/: __init__.py  atomic_io.py  base.py  json_repository.py  migrator.py  sqlite_repository.py
sync/: __init__.py  base.py  local.py  s3.py  webdav.py
tests/: test_attachments.py  test_backup.py  test_bm25.py  test_calendar_view.py  test_commands.py  test_config_settings.py  test_crypto.py  test_dashboard.py  test_find_replace.py  test_graph_build.py  test_graph_export.py  test_highlight_spans.py  test_history.py  test_i18n.py  test_image_attach.py  test_incremental_index.py  test_integrity.py  test_kanban.py  test_knowledge_graph.py  test_markdown_parser.py  test_md_actions.py  test_migrate.py  test_note_model.py  test_note_tasks.py  test_persistence.py  test_pinyin_fuzzy.py  test_recurrence.py  test_reminder.py  test_search_engine.py  test_search_scoring.py  test_snippet.py  test_sqlite_repository.py  test_stats_line.py  test_styled_html.py  test_sync.py  test_tag_cloud.py  test_task_dates.py  test_task_model.py  test_task_stats.py  test_theme.py  (+5 more)
