[project]
name = "todolist"
version = "1.0.0"
description = "SmartNotes - 智能笔记管理系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altgraph==0.17.5",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.63.0",
    "kiwisolver==1.5.0",
    "markdown==3.10.2",
    "matplotlib==3.10.9",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "packaging==26.2",
    "pillow==12.2.0",
    "pip==26.1.1",
    "pygments==2.20.0",
    "pyinstaller==6.20.0",
    "pyinstaller-hooks-contrib==2026.5",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "ruff==0.15.14",
    "setuptools==82.0.1",
    "six==1.17.0",
    "tkinter-qpython==8.6.0.5",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.ruff]
indent-width = 4
line-length = 110

[tool.ruff.lint]
# reference: https://docs.astral.sh/ruff/linter/#fixes
select = [
	"F",
	"E",
	"N",
	"I",
	"W",
	"PL",
	"PERF",
]
ignore=[
	"E731",
	"PLR2004",
	"PLR0913",
	"E722"
]

[tool.ruff.lint.pylint]
max-nested-blocks = 4

[tool.mypy]
# Progressive typing: lenient defaults, tightened per-module over time.
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]

