[project]
name = "todolist"
version = "1.0.0"
description = "SmartNotes - 智能笔记管理系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Runtime deps actually imported by the application.
    "markdown==3.10.2",
    "pygments==2.20.0",
    "networkx==3.4.2",
    "pillow==12.2.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.14",
    "pytest>=8",
    "mypy>=1.8",
]
build = [
    "pyinstaller==6.20.0",
    "pyinstaller-hooks-contrib==2026.5",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.ruff]
indent-width = 4
line-length = 110

[tool.ruff.lint]
# reference: https://docs.astral.sh/ruff/linter/#fixes
select = [
	"F",
	"E",
	"N",
	"I",
	"W",
	"PL",
	"PERF",
]
ignore=[
	"E731",
	"PLR2004",
	"PLR0913",
	"E722"
]

[tool.ruff.lint.pylint]
max-nested-blocks = 4

[tool.mypy]
# Progressive typing: lenient defaults, tightened per-module over time.
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]

